--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,9 +19,14 @@ jobs:
     - uses: actions/checkout@v3
     - name: code check
       run: |
-        echo This demo code check shows a 
-        echo very basic and easy-to-understand workflow
+        This code check 
+        echo the task of code check
       
+    - name: unit testing
+      run: |
+        This unit testing 
+        echo the task of unit testing
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
