--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,4 +36,10 @@ jobs:
         
     - run: npm ci
     - run: npm run build --if-present
+
+    - name: Publish build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: my-artifact
+        path: path/to/artifact/ 
     
