edit upload artifact

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,9 +37,9 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
-    - name: Publish build artifacts
+    - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: my-artifact
-        path: path/to/artifact/ 
+        path: dist 
     
